# DL

./: .condarc  .condarc位置.txt  .gitignore  Jupyter.md  README.md  callbacks.py  cos learning rate decay.ggb  model-parallelism.ipynb  pip.ini  requirements.txt  test.py  test_gpu_performance.py  to_tuple.py
Pytorch/: EMA.py  Pytorch 设置随机种子Seed来保证训练结果唯一.md  __call__.py  cite.ipynb  module_copy.py  pickle.pkl  pickle_test.py  pickle保存对象到文件.py  pytorch和np设定随机种子.md  test.py  torch.cuda.ipynb  version.py  划分数据集.md
Pytorch/00_深度学习和神经网络/: 1.1.1 深度学习的介绍.md  1.1.2 神经网络的介绍.md
Pytorch/01_PyTorch基本/: collate_fn.md  device.ipynb  gradient.py  mannul_gradient.ipynb  matrix_multiply_speed.ipynb  minpool.py  np_torch_print.py  torch.randseed.md  use-gpu.ipynb
Pytorch/02_损失函数/: L1Loss.ipynb  MSELoss L2Loss.ipynb  (+3 more)
Pytorch/24-libtorch-test/: .gitignore  CMakeLists.txt  main.cpp
TensorFlow/: readme.md  tf2的特点.md  源码Git.txt  笔记Git.txt
datasets/: get_det_acc.ipynb  get_det_num.ipynb  labelme_mask_load.ipynb  torchvision自带分类数据集.txt
jax/: resnet.py  vmap.py
nvidia/: nvidia-smi.ipynb  nvitop.md  pynvml.ipynb
nvidia nvitop/: nvitop.md
pytorch_geometric/: OGB_MAG.ipynb  Planetoid--Cora--GraphSAGE.ipynb  Planetoid--Cora--GraphUNet.ipynb  Planetoid--Cora--normal--captum_explainer.ipynb  Planetoid--Cora--normal--gnn_explainer.ipynb  Planetoid--Cora--normal.ipynb  Reddit--GraphSAGE.ipynb  Reddit--Normal.ipynb  TUDataset--ENZYMES.ipynb  TUDataset--IMDB-BINARY.ipynb  TUDataset--MUTAG.ipynb  TUDataset--PROTEINS.ipynb  gin.py  graph_sage.py  relational_gnn.py
spacy_learn/: sapcy.ipynb
(+270 files in other folders)
